fix: change z-index

--- a/src/app/welcome/welcome.component.scss
+++ b/src/app/welcome/welcome.component.scss
@@ -328,7 +328,7 @@
 }
 
 .course-title-link {
-  z-index: 100;
+  z-index: 90;
   .course-title-wrap:hover {
     background-color: rgba(121, 173, 62, 0.363);
   }
